# qfitswidget

./: LICENSE  README.md  compile_qt.sh  mypy.ini  pyproject.toml  requirements.txt  setup.py  test.py
qfitsview/: __init__.py  fitsview.py  fitsview.ui  norm.py  qfitsview.py  qimageview.py  resources.py  resources.rc  ui_fitsview.py
qfitswidget/: __init__.py  fitswidget.py  fitswidget.ui  navigationtoolbar.py  norm.py  qfitswidget.py  qimageview.py  settings.py
qfitswidget/qt/: fitswidget.py  fitswidget.ui  fitswidget_ui.py  resources.py  resources.qrc  resources_rc.py  settings.py  settings.ui  settings_ui.py
