[tool.poetry]
name = "qfitswidget"
packages = [{ include = "qfitswidget" }]
version = "0.11.0"
description = "PyQt widget for displaying FITS files"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
astropy = ">=7.0.1,<8"
PyQt5 = "^5.15.11"
opencv-python-headless = "^4.10.0.84"
jinja2 = "^3.1.4"

[tool.poetry.dev-dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39', 'py311']
