[project]
name = "qfitswidget"
version = "0.12.1"
description = "PyQt widget for displaying FITS files"
authors = [{ name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" }]
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "matplotlib>=3.10.1,<4",
    "numpy>=2.2.5,<3",
    "astropy>=7.0.1,<8",
    "PyQt5>=5.15.11,<6",
    "opencv-python-headless>=4.10.0.84,<5",
    "jinja2>=3.1.4,<4",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "flake8>=7.3.0",
    "pre-commit>=4.2.0,<5",
]

[tool.hatch.build.targets.sdist]
include = ["qfitswidget"]

[tool.hatch.build.targets.wheel]
include = ["qfitswidget"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']
